only recent posts

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 
     <Hr />
 
-    {
+    <!--  {
       featuredPosts.length > 0 && (
         <>
           <section id="featured">
@@ -76,10 +76,10 @@ const socialCount = SOCIALS.filter(social => social.active).length;
           <Hr />
         </>
       )
-    }
+    } -->
 
     <section id="recent-posts">
-      <h2>Recent Posts</h2>
+      <h2>Blog: Recent Posts</h2>
       <ul>
         {
           sortedPosts.map(
