--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,7 @@
 ---
 import { SITE } from "@config";
+import "@styles/font-faces.css";
 import "@styles/base.css";
-
-const googleSiteVerification = import.meta.env.PUBLIC_GOOGLE_SITE_VERIFICATION;
 
 export interface Props {
   title?: string;
@@ -55,89 +54,9 @@ const socialImageURL = new URL(
     <meta property="twitter:description" content={description} />
     <meta property="twitter:image" content={socialImageURL} />
 
-    {
-      // If PUBLIC_GOOGLE_SITE_VERIFICATION is set in the environment variable,
-      // include google-site-verification tag in the heading
-      // Learn more: https://support.google.com/webmasters/answer/9008080#meta_tag_verification&zippy=%2Chtml-tag
-      googleSiteVerification && (
-        <meta
-          name="google-site-verification"
-          content={googleSiteVerification}
-        />
-      )
-    }
-
     <script is:inline src="/toggle-theme.js"></script>
   </head>
   <body>
-    <style is:global>
-      @font-face {
-        /* all latin-ext */
-        font-family: "IBM Plex Mono";
-        font-style: italic;
-        font-weight: 400;
-        font-display: swap;
-        src: url("fonts/IBM-plex-mono_italic.woff2") format("woff2");
-        unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F,
-          U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F,
-          U+A720-A7FF;
-      }
-
-      @font-face {
-        font-family: "IBM Plex Mono";
-        font-style: normal;
-        font-weight: 400;
-        font-display: swap;
-        src: url("fonts/IBM-plex-mono_regular.woff2") format("woff2");
-        unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F,
-          U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F,
-          U+A720-A7FF;
-      }
-
-      @font-face {
-        font-family: "IBM Plex Mono";
-        font-style: normal;
-        font-weight: 600;
-        font-display: swap;
-        src: url("fonts/IBM-plex-mono_semibold.woff2") format("woff2");
-        unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F,
-          U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F,
-          U+A720-A7FF;
-      }
-
-      @font-face {
-        font-family: "Virgil";
-        font-style: normal;
-        font-weight: 400;
-        font-display: swap;
-        src: url("fonts/Virgil.woff2") format("woff2");
-        unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F,
-          U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F,
-          U+A720-A7FF;
-      }
-
-      @font-face {
-        font-family: "Inter";
-        font-style: normal;
-        font-weight: 400;
-        font-display: swap;
-        src: url("fonts/Inter-regular.woff2") format("woff2");
-        unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F,
-          U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F,
-          U+A720-A7FF;
-      }
-
-      @font-face {
-        font-family: "Inter";
-        font-style: normal;
-        font-weight: 600;
-        font-display: swap;
-        src: url("fonts/Inter-semibold.woff2") format("woff2");
-        unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F,
-          U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F,
-          U+A720-A7FF;
-      }
-    </style>
     <slot />
   </body>
 </html>
