updated styles, fixed fonts, still along way to go

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -115,7 +115,6 @@ const { activeNav } = Astro.props;
       </nav>
     </div>
   </div>
-  <Hr />
 </header>
 
 <style>
@@ -136,6 +135,10 @@ const { activeNav } = Astro.props;
   }
   .hamburger-menu svg {
     @apply h-6 w-6 scale-125 fill-skin-base;
+  }
+
+  header {
+    @apply mb-8 mt-6;
   }
 
   nav {
