--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -6,6 +6,7 @@ import Tag from "@components/Tag.astro";
 import Datetime from "@components/Datetime";
 import type { CollectionEntry } from "astro:content";
 import { slugifyStr } from "@utils/slugify";
+import Hr from "@components/Hr.astro";
 
 export interface Props {
   post: CollectionEntry<"blog">;
@@ -24,7 +25,7 @@ const ogUrl = new URL(ogImage ? ogImage : `${title}.png`, Astro.url.origin)
 <Layout title={title} author={author} description={description} ogImage={ogUrl}>
   <Header />
   <div class="mx-auto flex w-full max-w-3xl justify-start px-2">
-    <button
+    <!-- <button
       class="focus-outline mt-8 mb-2 flex hover:opacity-75"
       onclick="history.back()"
     >
@@ -32,12 +33,13 @@ const ogUrl = new URL(ogImage ? ogImage : `${title}.png`, Astro.url.origin)
         ><path
           d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
         ></path>
-      </svg><span>Go back</span>
-    </button>
+      </svg><span>Back to posts</span>
+    </button> -->
   </div>
   <main id="main-content">
     <h1 class="post-title">{title}</h1>
-    <Datetime datetime={pubDatetime} size="lg" className="my-2" />
+    <Hr />
+    <!-- <Datetime datetime={pubDatetime} size="lg" className="my-2" /> -->
     <article id="article" role="article" class="prose mx-auto mt-8 max-w-3xl">
       <Content />
     </article>
@@ -52,9 +54,6 @@ const ogUrl = new URL(ogImage ? ogImage : `${title}.png`, Astro.url.origin)
 <style>
   main {
     @apply mx-auto w-full max-w-3xl px-4 pb-12;
-  }
-  .post-title {
-    @apply text-2xl font-semibold text-skin-accent;
   }
   .tags-container {
     @apply my-8;
