--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,9 +22,10 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 <Layout>
   <Header />
   <main id="main-content">
-    <section id="hero">
+    <section>
       <h1>Henlo</h1>
-      <a
+
+      <!--  <a
         target="_blank"
         href="/rss.xml"
         class="rss-link"
@@ -38,8 +39,8 @@ const socialCount = SOCIALS.filter(social => social.active).length;
             d="M12 20.001h2C14 14.486 9.514 10 4 10v2c4.411 0 8 3.589 8 8.001z"
           ></path><circle cx="6" cy="18" r="2"></circle>
         </svg>
-      </a>
-
+      </a> -->
+      <Hr />
       <p>
         I‘m <strong>Adina</strong> and this blog contains my stuff. I am just setting
         this thing up, I expect more content sooooooooon.
@@ -55,8 +56,6 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         )
       }
     </section>
-
-    <Hr />
 
     <!--  {
       featuredPosts.length > 0 && (
